GP-1180 fix LoadPdbDialog handling of missing pdb info, fixes github issue #3289
LoadPdbDialog wasn't handling things well if Pdb information was missing or incomplete or malformed, allowing fake values (such as '<missing>') through to be used during a search, which could cause problems.